# nlp-algorithms

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  notebook.py  overfit_encoder_decoder.py  pyproject.toml  setup.py  test_encoder_decoder.py  train.py  train_encoder_decoder.py  train_util.py  train_utils.py
01.lemmatization/: dictionary_lemmas.py  lemmatization.py
02.Stemming/: porter_stemmer.py
02.stemming/: porter_stemmer.py
03.tokenization/: byte_pair_encoding.py  tokenization.ipynb  word_piece.py
04.vectorization/: 01.one_hot_encoding.py  02.bow.py  03.ngram.py  04.tfidf.py
05.ngram_lm/: mlp.py
05.rnns/: bidirectional_rnn.py  stacked_rnn.py  train.py
06.RNNs/: rnn.py
06.rnns/: rnn.py  stacked_rnn.py  train.py
09.attention/: attention.py
10.encoder_decoder/: attention.py  positional_encoding.py  seq2seq.py
Lemmatization/: lemmatization.py
RNNs/: model.py
a01_lemmatization/: dictionary_lemmas.py  lemmatization.py
a02_stemming/: porter_stemmer.py
a03_tokenization/: bpe.py  byte_pair_encoding.py  whitespace.py
a04_vectorization/: 02.bow.py  04.tfidf.py
a05_ngram_lm/: mlp.py
a06_rnn/: bi_rnn.py  rnn.py
a06_rnns/: bidirectional_rnn.py  rnn.py  stacked_rnn.py
a07_lstm/: awd-lstm.py  awd_lstm.py  bi_lstm.py  locked_dropout.py  lstm.py  test_lstm.py
a08_gru/: bi_gru.py  gru.py
a09_attention/: attention.py
a10_encoder_decoder/: seq2seq.py
a11_encoder/: bert.py
common/: positional_encoding.py
conf/: config.yaml
config/: awd_lstm_ptb.yaml  bigru_imdb.yaml  bilstm_imdb.yaml  birnn_imdb.yaml  birnn_imdb_simple.yaml  config.yaml  gru_ptb.yaml  lstm_imdb.yaml  lstm_imdb_simple.yaml  lstm_ptb.yaml  lstm_ptb_simple.yaml  pytorch_bigru_imdb.yaml  pytorch_bilstm_imdb.yaml  pytorch_birnn_imdb.yaml  pytorch_gru_imdb.yaml  pytorch_lstm_imdb.yaml  pytorch_lstm_ptb.yaml  pytorch_rnn_imdb.yaml  rnn_imdb_simple.yaml  rnn_ptb.yaml  rnn_ptb_simple.yaml  seq2seq_tatoeba.yaml
core_lemmatization/: lemmatization.py  lemmatization_wordnet.py
(+277 files in other folders)
