
[project]
name = "nlp-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pilot-Khadka", email = "khdpilot@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools]
packages = [
    "core_tokenization",
    "core_vectorization",
    "net_rnn",
    "net_lstm",
    "net_gru",
    "util",
    "dataset",
    "engine",
    "task",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

