[project]
name = "nlp-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pilot-Khadka", email = "khdpilot@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.2",
    "gputil>=1.4.0",
    "huggingface-hub>=1.6.0",
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "setuptools>=82.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[project.scripts]
nlp-algorithms = "nlp_algorithms:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.55.0",
    "pytest>=9.0.2",
]
